Update event details and president's message
Updated the event section to include Korité 2025 and modified the president's message. Added new annual reports and updated the contact section.

--- a/index.html
+++ b/index.html
@@ -246,123 +246,187 @@
                 </div>
             </article>
 
-            <!-- Korité 2024 -->
-            <article class="event">
-                <h3>Korité 2024</h3>
-                <div class="gallery-container">
-                    <div class="visible-gallery">
-                        <img src="korite1.jpg" alt="Korité 1">
-                        <img src="korite2.jpg" alt="Korité 2">
-                        <img src="korite3.jpg" alt="Korité 3">
-                    </div>
-                    <div class="hidden-gallery">
-                        <img src="korite4.jpg" alt="Korité 4">
-                        <img src="korite5.jpg" alt="Korité 5">
-                        <img src="korite6.jpg" alt="Korité 6">
-                        <img src="korite7.jpg" alt="Korité 7">
-                        <img src="korite8.jpg" alt="Korité 8">
-                        <img src="korite9.jpg" alt="Korité 9">
-                        <img src="korite10.jpg" alt="Korité 10">
-                    </div>
-                    <button class="voir-plus" aria-expanded="false">Voir plus de photos</button>
-                </div>
-            </article>
-        </section>
+           <!-- Korité 2025 -->
+<article class="event">
+  <h3>Korité 2025</h3>
+  <div class="gallery-container">
+    <div class="visible-gallery">
+      <img src="K6.JPG" alt="K6">
+      <img src="K12.JPG" alt="K12">
+      <img src="K9.JPG" alt="K9">
+    </div>
+    <div class="hidden-gallery">
+      <img src="K4.JPG" alt="K4">
+      <img src="K7.JPG" alt="K7">
+      <img src="K1.JPG" alt="K1">
+      <img src="K17.JPG" alt="K17">
+      <img src="K11.JPG" alt="K11">
+      <img src="K3.JPG" alt="K3">
+      <img src="K14.JPG" alt="K14">
+      <img src="K8.JPG" alt="K8">
+      <img src="K2.JPG" alt="K2">
+      <img src="K15.JPG" alt="K15">
+      <img src="K13.JPG" alt="K13">
+      <img src="K10.JPG" alt="K10">
+      <img src="K16.JPG" alt="K16">
+      <img src="K5.JPG" alt="K5">
+    </div>
+    <button class="voir-plus" aria-expanded="false">Voir plus de photos</button>
+  </div>
+</article>
 
-        <!-- BILANS -->
-        <section id="bilans" class="card">
-            <h2>Bilans de l’association</h2>
-            <p>Retrouvez ici nos rapports d’activités et bilans financiers annuels.</p>
-            <ul class="bilan-list">
-                <li><a href="Bilan_2023_2024.pdf" target="_blank">📄 Bilan 2023-2024</a></li>
-                <li><a href="Bilan_2024_2025.pdf" target="_blank">📄 Bilan 2024-2025</a></li>
-            </ul>
-        </section>
+</section>
 
-        <!-- PRESIDENT -->
-        <section id="president" class="card">
-            <h2>Mot du Président</h2>
-            <div class="president-section">
-                <img src="oumar.jpg" alt="Président AESM" class="president-photo">
-                <div class="president-message">
-                    <p>
-                        Chers membres, chers amis,  
-                        C’est un honneur pour moi de vous souhaiter la bienvenue au sein de l’AESM.  
-                        Ensemble, nous continuerons à renforcer les liens de solidarité entre étudiants,  
-                        à promouvoir la culture sénégalaise et à bâtir une communauté unie et dynamique.
-                    </p>
-                    <p><strong>— Oumar Ka Thiam, Président 2025-2026</strong></p>
-                </div>
-            </div>
-        </section>
+<!-- BILANS -->
+<section id="bilans" class="card">
+  <h2>Bilans annuels</h2>
+  <p>Téléchargez les bilans officiels :</p>
+  <ul class="bilans-list">
+    <li>
+      <a href="Bilan_Moral_Finacier_AESM_2023_2024_Khadim_DIALLO.pdf" download>
+        <i class="fas fa-file-pdf"></i> Bilan Moral &amp; Financier — 2023-2024 (K. Diallo)
+      </a>
+    </li>
+    <li>
+      <a href="Bilan_Morale_Finacier_2024_2025_AESM_AG_02_11_2025.pdf_SEYE12.pdf" download>
+        <i class="fas fa-file-pdf"></i> Bilan Moral &amp; Financier — 2024-2025 (M. Seye)
+      </a>
+    </li>
+  </ul>
+</section>
 
-        <!-- PARTENAIRES -->
-        <section id="partenaires" class="card">
-            <h2>Nos partenaires</h2>
-            <div class="partners-grid">
-                <img src="metz-ville.png" alt="Ville de Metz">
-                <img src="senegal.png" alt="Ambassade du Sénégal">
-                <img src="univlorraine.png" alt="Université de Lorraine">
-                <img src="crous.png" alt="CROUS Lorraine">
-                <img src="campusfrance.png" alt="Campus France">
-            </div>
-        </section>
+<!-- MOT DU PRÉSIDENT -->
+<section id="president" class="card">
+  <h2>Mot du Président</h2>
+  <div class="president-message">
+    <div class="president-photo">
+      <img src="oumarKT.jpg" alt="Photo président">
+    </div>
+    <div class="president-text">
+      <blockquote>
+        "Chers membres et sympathisants de l'AESM, c'est avec fierté que nous entamons la saison 2025-2026.
+        Merci pour votre confiance — ensemble nous construirons une année riche en événements et solidarité."
+      </blockquote>
+    </div>
+  </div>
+</section>
 
-        <!-- NEWS -->
-        <section id="news" class="card">
-            <h2>Actualités</h2>
-            <article class="news-item">
-                <h3>Reprise des activités 2025</h3>
-                <p>L’année universitaire 2025-2026 démarre avec plusieurs initiatives : accueil des nouveaux, ateliers, et projets communautaires.</p>
-                <a href="actualites.html" class="btn">Voir toutes les actualités</a>
-            </article>
-        </section>
+<!-- Actualités -->
+<section id="news" class="card">
+  <h2>Actualités</h2>
 
-        <!-- DON -->
-        <section id="don" class="card highlight">
-            <h2>Soutenir l’AESM</h2>
-            <p>Votre contribution aide à financer nos activités culturelles, sociales et éducatives.</p>
-            <a href="https://www.helloasso.com/associations/aesm" target="_blank" class="btn-don">💛 Faire un don via HelloAsso</a>
-        </section>
+  <div class="news-item">
+    <h3>Changement de Présidence – Novembre 2025</h3>
+    <p>
+      À la suite des élections du <strong>2 novembre 2025</strong>, 
+      <strong>Oumar Ka Thiam</strong> a été élu nouveau président de l'association, 
+      succédant à <strong>Mamadou Seye</strong>. 
+      Ce dernier occupe désormais le poste de 
+      <strong>représentant du président de la FESSEF (Fédération des Étudiants et Stagiaires Sénégalais de France)</strong> 
+      pour la région <strong>Grand Est</strong>. Nous le remercions pour le travail qu’il a accompli et nous lui souhaitons bon courage pour ses nouvelles fonctions.
+    </p>
 
-        <!-- CONTACT -->
-        <section id="contact" class="card">
-            <h2>Contactez-nous</h2>
-            <div class="contact-grid">
-                <div class="contact-item">
-                    <i class="fa-solid fa-envelope"></i>
-                    <p><a href="mailto:aesm.metz@gmail.com">aesm.metz@gmail.com</a></p>
-                </div>
-                <div class="contact-item">
-                    <i class="fa-brands fa-instagram"></i>
-                    <p><a href="https://www.instagram.com/aesm.metz" target="_blank">@aesm.metz</a></p>
-                </div>
-                <div class="contact-item">
-                    <i class="fa-brands fa-facebook"></i>
-                    <p><a href="https://www.facebook.com/aesm.metz" target="_blank">AESM Metz</a></p>
-                </div>
-            </div>
-        </section>
-    </main>
+    <div class="former-president-card">
+      <img src="exPresi.jpg" alt="Mamadou Seye" class="former-president-photo">
+      <h4 class="former-president-name">Mamadou Seye</h4>
+      <p class="former-president-title">Représentant du président de la FESSEF – Région Grand Est</p>
+    </div>
+  </div>
+</section>
 
-    <!-- FOOTER -->
-    <footer class="site-footer">
-        <p>© 2025 AESM Metz — Tous droits réservés</p>
-        <p><a href="#top">⬆ Retour en haut</a></p>
-    </footer>
+<!-- Collaborateurs & Sponsors -->
+<section id="partners" class="card partners-section">
+  <h2>Collaborateurs et Sponsors</h2>
 
-    <!-- SCRIPT : afficher/masquer les galeries -->
-    <script>
-        document.querySelectorAll('.voir-plus').forEach(button => {
-            button.addEventListener('click', () => {
-                const container = button.closest('.gallery-container');
-                const hiddenGallery = container.querySelector('.hidden-gallery');
-                const expanded = button.getAttribute('aria-expanded') === 'true';
-                hiddenGallery.style.display = expanded ? 'none' : 'grid';
-                button.textContent = expanded ? 'Voir plus de photos' : 'Voir moins';
-                button.setAttribute('aria-expanded', !expanded);
-            });
-        });
-    </script>
-</body>
-</html>
+  <div class="partners-grid">
+    <div class="partner-card">
+      <div class="logo-inner">
+        <img src="IMG_1F279CE6DCDB-1.jpeg" alt="ASM" class="clickable-img">
+      </div>
+      <p class="partner-name">ASM</p>
+    </div>
+
+    <div class="partner-card">
+      <div class="logo-inner">
+        <img src="LeCap.jpg" alt="Le Cap" class="clickable-img">
+      </div>
+      <p class="partner-name">Le Cap</p>
+    </div>
+
+    <div class="partner-card">
+      <div class="logo-inner">
+        <img src="PHOTO-2025-03-11-21-10-51.jpg" alt="Lemfi" class="clickable-img">
+      </div>
+      <p class="partner-name">Lemfi</p>
+    </div>
+
+    <div class="partner-card">
+      <div class="logo-inner">
+        <img src="afev.png" alt="Afev" class="clickable-img">
+      </div>
+      <p class="partner-name">Afev</p>
+    </div>
+
+    <div class="partner-card">
+      <div class="logo-inner">
+        <img src="PHOTO-2025-03-19-13-34-17.jpg" alt="Dahira Mouride de Metz" class="clickable-img">
+      </div>
+      <p class="partner-name">Dahira Mouride de Metz</p>
+    </div>
+
+    <div class="partner-card">
+      <div class="logo-inner">
+        <img src="UL.jpg" alt="Université de Lorraine" class="clickable-img">
+      </div>
+      <p class="partner-name">Université de Lorraine</p>
+    </div>
+
+    <div class="partner-card">
+      <div class="logo-inner">
+        <img src="LesCouleursD.jpg" alt="Les Couleurs D'Afrique" class="clickable-img">
+      </div>
+      <p class="partner-name">Les Couleurs D'Afrique</p>
+    </div>
+  </div>
+</section>
+
+<!-- Lightbox -->
+<div id="lightbox" class="lightbox">
+  <span class="close">&times;</span>
+  <img class="lightbox-content" id="lightbox-img">
+</div>
+
+<!-- DON -->
+<section id="don" class="card text-center">
+  <h2>Faire un don</h2>
+  <p>Votre soutien permet d'organiser nos activités et d'aider les étudiants.</p>
+  <a class="don-button" href="https://www.helloasso.com/associations/association-des-etudiants-senegalais-de-metz/formulaires/1" target="_blank" rel="noopener">
+    Faire un don via HelloAsso
+  </a>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="card text-center">
+  <h2>Contact</h2>
+  <p>Pour toute question ou partenariat, utilisez notre formulaire de contact.</p>
+  <a class="don-button" href="contact.html" target="_blank" rel="noopener">Accéder au formulaire</a>
+</section>
+
+<p class="site-credit">Ce site a été réalisé par des membres de l'AESM.</p>
+
+<footer class="site-footer">
+  <div class="footer-inner">
+    <p>© 2025-2026 AESM — Tous droits réservés</p>
+    <div class="socials">
+      <a href="https://www.instagram.com/aesmetz/" target="_blank" rel="noopener">
+        <img src="logo-instagram-jpg.png" alt="Instagram" width="32" height="32">
+      </a>
+      <a href="https://www.tiktok.com/@aesmetz" target="_blank" rel="noopener">
+        <img src="logo-png-tiktok.jpg" alt="TikTok" width="32" height="32">
+      </a>
+      <a href="https://www.youtube.com/@AESMETZ" target="_blank" rel="noopener">
+        <img src="logo-de-youtube.png" alt="YouTube" width="32" height="32">
+      </a>
+    </div>
+  </div>
+</footer>
